// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Loader> matches snapshot 1`] = `
<div>
  <div
    class="loading-container loader css-13asuto-container-container"
    data-testid="loader"
    id="main-loader"
  >
    <span
      style="display: inherit;"
    >
      <span
        style="background-color: rgb(116, 176, 234); width: 15px; height: 15px; margin: 2px; border-radius: 100%; display: inline-block; animation: react-spinners-PulseLoader-pulse 0.75s 0.12s infinite cubic-bezier(0.2, 0.68, 0.18, 1.08); animation-fill-mode: both;"
      />
      <span
        style="background-color: rgb(116, 176, 234); width: 15px; height: 15px; margin: 2px; border-radius: 100%; display: inline-block; animation: react-spinners-PulseLoader-pulse 0.75s 0.24s infinite cubic-bezier(0.2, 0.68, 0.18, 1.08); animation-fill-mode: both;"
      />
      <span
        style="background-color: rgb(116, 176, 234); width: 15px; height: 15px; margin: 2px; border-radius: 100%; display: inline-block; animation: react-spinners-PulseLoader-pulse 0.75s 0.36s infinite cubic-bezier(0.2, 0.68, 0.18, 1.08); animation-fill-mode: both;"
      />
    </span>
  </div>
</div>
`;

exports[`<Loader> matches snapshot with fullscreen 1`] = `
<div>
  <div
    class="loading-container css-135ncqf-container-container"
    data-testid="loader"
  >
    <span
      style="display: inherit;"
    >
      <span
        style="background-color: rgb(116, 176, 234); width: 15px; height: 15px; margin: 2px; border-radius: 100%; display: inline-block; animation: react-spinners-PulseLoader-pulse 0.75s 0.12s infinite cubic-bezier(0.2, 0.68, 0.18, 1.08); animation-fill-mode: both;"
      />
      <span
        style="background-color: rgb(116, 176, 234); width: 15px; height: 15px; margin: 2px; border-radius: 100%; display: inline-block; animation: react-spinners-PulseLoader-pulse 0.75s 0.24s infinite cubic-bezier(0.2, 0.68, 0.18, 1.08); animation-fill-mode: both;"
      />
      <span
        style="background-color: rgb(116, 176, 234); width: 15px; height: 15px; margin: 2px; border-radius: 100%; display: inline-block; animation: react-spinners-PulseLoader-pulse 0.75s 0.36s infinite cubic-bezier(0.2, 0.68, 0.18, 1.08); animation-fill-mode: both;"
      />
    </span>
  </div>
</div>
`;
